# repers

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  PHILOSOPHY.md  PITFALLS.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  WORKER.md  llms.txt  pyproject.toml  repers_cli.py  repers_mcp.py
.codex-plugin/: plugin.json
.github/: SUBMISSIONS.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: repers-smoke.yml
.repers/: manifest.json
.repers/capabilities/: registry.json
.repers/contracts/: README.md  dispatch.v1.json  plan.v1.json  preflight.v1.json  review.v1.json  router.v1.json  shipping.v1.json  step_result.v1.json
.repers/docs/: architecture.md  contracts.md  installation.md  integration.md  open-source-benchmark.json  open-source-structure-study.md  packaging.md  spec.md  workflow.md
.repers/hooks/: pre-commit
.repers/index/: repers.db
.repers/plugins/: README.md
.repers/plugins/dispatch/: default.py
.repers/plugins/plan/: default.py
.repers/plugins/preflight/: default.py
.repers/plugins/review/: default.py
.repers/plugins/route/: default.py  file_count_strict.py
.repers/plugins/ship/: default.py
.repers/scripts/: backends.py  capability_registry.py  codegraph_support.py  continuation_runner.py  dag_engine.py  doctor.py  install_repers.py  objective_audit.py  open_source_benchmark.py  orchestration_fixture.py  package_repers.py  plan_runner.py  plugin_loader.py  publish_clone_fixture.py  publish_handoff.py  receiver_fixture.py  release_evidence.py  release_gate.py  release_pack.py  remote_bootstrap.py  repers.py  research_index.py  reviewer.py  router.py  shipping.py  snapshot_freshness.py  source_install_fixture.py  state_report.py  verify_all.py
.repers/templates/: plan.md  research.md  review.md  shipping.md
docs/: bug-hunt-demo.md  components-map.md  cross-repo-handoff.md  e2e-walkthrough.md  maturity-curve.md  promotion-playbook.md  release-checklist.md  repository-metadata.md
docs/planning/: active-repers-build.md
examples/basic-task/: README.md
examples/bug-hunt/: README.md
playground/competitive-analysis/: README.md  evaluation-methodology.md
skills/repers-bug-hunt/: SKILL.md
skills/repers-init/: SKILL.md
skills/repers-release-pack/: SKILL.md
skills/repers-route/: SKILL.md
skills/repers-sinkin/: SKILL.md
tests/: smoke_repers.py
