[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "repers"
version = "0.2.0"
description = "Operating layer for multi-agent repository work — contract that lets AI agents (any LLM) split a codebase task into parallel non-colliding lanes, hand off via JSON evidence, and ship verifiable release packs."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{name = "coolsocket"}]
keywords = [
    "ai-agents",
    "multi-agent",
    "agent-orchestration",
    "agent-tooling",
    "claude-code",
    "codex",
    "swe-agents",
    "workflow",
    "preflight",
    "dag",
    "release-engineering",
    "local-first",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/coolsocket/repers"
Repository = "https://github.com/coolsocket/repers"
Documentation = "https://github.com/coolsocket/repers/blob/main/AGENTS.md"
Issues = "https://github.com/coolsocket/repers/issues"
Changelog = "https://github.com/coolsocket/repers/blob/main/CHANGELOG.md"

[project.scripts]
repers = "repers_cli:main"

# Hatchling: bundle the .repers/ runtime + skills/ into the wheel under a
# non-hidden directory so the entry-point wrapper can find them at runtime
# regardless of install location (pip / pipx / uvx).
[tool.hatch.build.targets.wheel]
include = ["repers_cli.py"]

[tool.hatch.build.targets.wheel.force-include]
".repers" = "_repers_runtime/dot_repers"
"skills" = "_repers_runtime/skills"
"AGENTS.md" = "_repers_runtime/AGENTS.md"
"WORKER.md" = "_repers_runtime/WORKER.md"
"PHILOSOPHY.md" = "_repers_runtime/PHILOSOPHY.md"

[tool.hatch.build.targets.sdist]
include = [
    "repers_cli.py",
    "pyproject.toml",
    "README.md",
    "LICENSE",
    "AGENTS.md",
    "WORKER.md",
    "PHILOSOPHY.md",
    "CLAUDE.md",
    "CHANGELOG.md",
    ".repers/**",
    "skills/**",
    "docs/**",
]
exclude = [
    ".repers/index/**",
    "**/__pycache__/**",
]
