[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "repers"
version = "0.2.0"
description = "Operating layer for multi-agent repository work — contract that lets AI agents (any LLM) split a codebase task into parallel non-colliding lanes, hand off via JSON evidence, and ship verifiable release packs."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{name = "coolsocket"}]
keywords = [
    "ai-agents",
    "multi-agent",
    "agent-orchestration",
    "agent-tooling",
    "claude-code",
    "codex",
    "swe-agents",
    "workflow",
    "preflight",
    "dag",
    "release-engineering",
    "local-first",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.optional-dependencies]
# Install with: pip install 'repers[mcp]'   or   uvx --from 'git+url[mcp]' repers-mcp
# Brings the Model Context Protocol SDK so `repers-mcp` exposes RePERS as
# native tools to any MCP-aware agent (Claude Code, Cursor, OpenCode, ...).
mcp = ["mcp>=1.2"]

[project.urls]
Homepage = "https://github.com/coolsocket/repers"
Repository = "https://github.com/coolsocket/repers"
Documentation = "https://github.com/coolsocket/repers/blob/main/AGENTS.md"
Issues = "https://github.com/coolsocket/repers/issues"
Changelog = "https://github.com/coolsocket/repers/blob/main/CHANGELOG.md"

[project.scripts]
repers = "repers_cli:main"
repers-mcp = "repers_mcp:main"

# Hatchling: bundle the .repers/ runtime + skills/ into the wheel under a
# non-hidden directory so the entry-point wrapper can find them at runtime
# regardless of install location (pip / pipx / uvx).
[tool.hatch.build.targets.wheel]
# Tell hatchling these are first-class modules (so it doesn't try to
# auto-detect a package layout). force-include below lays out everything.
bypass-selection = true

[tool.hatch.build.targets.wheel.force-include]
"repers_cli.py" = "repers_cli.py"
"repers_mcp.py" = "repers_mcp.py"
".repers" = "_repers_runtime/dot_repers"
"skills" = "_repers_runtime/skills"
"AGENTS.md" = "_repers_runtime/AGENTS.md"
"WORKER.md" = "_repers_runtime/WORKER.md"
"PHILOSOPHY.md" = "_repers_runtime/PHILOSOPHY.md"

[tool.hatch.build.targets.sdist]
include = [
    "repers_cli.py",
    "repers_mcp.py",
    "pyproject.toml",
    "README.md",
    "LICENSE",
    "AGENTS.md",
    "WORKER.md",
    "PHILOSOPHY.md",
    "CLAUDE.md",
    "CHANGELOG.md",
    ".repers/**",
    "skills/**",
    "docs/**",
]
exclude = [
    ".repers/index/**",
    "**/__pycache__/**",
]
